# JapanTaxSimulator

./: .gitignore  ACCURATE_EXAMPLES.md  CLAUDE.md  COMPREHENSIVE_DOCUMENTATION.md  README.md  README_EN.md  TECHNICAL_DOCS.md  check_system_dimensions.py  compare_linearizations.py  debug_linearization.py  debug_matrices.py  enhanced_irf_test.py  final_bk_validation.py  final_issue5_test.py  final_linearization_test.py  fix_blanchard_kahn_simple.py  fix_tfp_mapping.py  pyproject.toml  quick_check.py  requirements.txt  simple_test.py  stable_bk_fix.py  test_dynamics.py  test_init_guess.py  test_irf_fixed.py  test_linearization_fix.py  test_model.py
.github/: CODEOWNERS  pull_request_template.md
config/: parameters.json
dev_tools/: README.md
docs/: EXAMPLES.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_SUMMARY.md  USER_GUIDE.md
notebooks/: 01_dsge_basics.ipynb  02_tax_policy_fundamentals.ipynb  03_research_grade_simulation.ipynb  04_policy_scenario_analysis.ipynb  __init__.py  advanced_tax_simulation_demo.ipynb  common.py  empirical_validation.ipynb  interactive_tax_analysis.ipynb  notebook_template.py  tax_simulation_demo.ipynb
results/: advanced_simulation_summary.csv  comprehensive_notebook_validation_report.json  notebook_test_report.txt  notebook_validation_summary.txt  report_所得税5%引き下げ.txt  report_消費税5%引き上げ_恒久的.txt  report_消費税5%引き上げ_段階的.txt  report_税制中立改革_消費税up所得税down.txt  research_report_tax_analysis_effects_jp.html  research_report_tax_analysis_effects_jp.txt  scenario_comparison.csv  tax_simulation_report.txt
scripts/: __init__.py  generate_report.py  (+5 more)
(+99 files in other folders)
