[project]
name = "japantaxsimulator"
version = "0.1.0"
description = "Dynamic Stochastic General Equilibrium (DSGE) model for analyzing tax policy impacts on the Japanese economy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipython>=7.20.0",
    "sympy>=1.8.0",
    "pytest>=6.2.0",
]
